Closed Bug 681203 Opened 14 years ago Closed 14 years ago

Fallback to bind all symbols when dynamic symbol lookup is not supported

Categories

(Core Graveyard :: Widget: Android, defect)

x86
Android
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla9

People

(Reporter: glandium, Assigned: glandium)

References

Details

(Whiteboard: [inbound])

Attachments

(1 file)

Dynamic symbol lookup in our android linker (currently) only works on ARM. More than that, it will fail to build on other architectures. We should fall back on non dynamic symbol lookup code when dynamic symbol lookup is not implemented.
This effectively restores the old code when no runtime_reloc function is defined. This will avoid failing to build on x86 android.
Attachment #555050 - Flags: review?(mwu)
Attachment #555050 - Flags: review?(mwu) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla9
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: