Bug 681203 - Bind all symbols when dynamic symbol lookup is not supported. r=mwu