other-licenses/android/linker.c
@@ -1954,9 +1954,13 @@ __asm__ (
     /* Jump to the resolved function. */
     "bx ip\n"
 );
+#else
+#define ANDROID_NO_RUNTIME_RELOC
 #endif
 
+#ifndef ANDROID_NO_RUNTIME_RELOC
 static void runtime_reloc() __attribute__((used));
+#endif
 
 static int link_image(soinfo *si, unsigned wr_offset)
 {
@@ -2201,16 +2205,23 @@ static int link_image(soinfo *si, unsigned wr_offset)
         }
     }
 
+#ifndef ANDROID_NO_RUNTIME_RELOC
     /* Initialize GOT[1] and GOT[2], which are used by the PLT trampoline */
     Elf32_Addr *got = (Elf32_Addr *)si->plt_got;
     got[1] = (Elf32_Addr) si;
     got[2] = (Elf32_Addr) runtime_reloc;
+#endif
 
     if(si->plt_rel) {
         DEBUG("[ %5d relocating %s plt ]\n", pid, si->name );
+#ifdef ANDROID_NO_RUNTIME_RELOC
+        if(reloc_library(si, si->plt_rel, si->plt_rel_count))
+            goto fail;
+#else
         /* Relocate PLT GOT */
         for (d = got + 3; d < got + 3 + si->plt_rel_count; d++)
             *d += si->base;
+#endif
     }
     if(si->rel) {
         DEBUG("[ %5d relocating %s ]\n", pid, si->name );
@@ -2221,9 +2232,14 @@ static int link_image(soinfo *si, unsigned wr_offset)
 #ifdef ANDROID_SH_LINKER
     if(si->plt_rela) {
         DEBUG("[ %5d relocating %s plt ]\n", pid, si->name );
+#ifdef ANDROID_NO_RUNTIME_RELOC
+        if(reloc_library_a(si, si->plt_rela, si->plt_rela_count))
+            goto fail;
+#else
         /* Relocate PLT GOT */
         for (d = got + 3; d < got + 3 + si->plt_rela_count; d++)
             *d += si->base;
+#endif
     }
     if(si->rela) {
         DEBUG("[ %5d relocating %s ]\n", pid, si->name );
